--- a/PageOne.css
+++ b/PageOne.css
@@ -292,17 +292,14 @@ body{
 margin:15px;
 }
 
-.album div{
+.album div {
   height: 200px;
-  border-radius:10px;
-
+  border-radius: 10px;
+  transition: height 0.5s ease;
 }
-.album div:hover{
-  height:250px;
-  border:2px solid white;
- 
-  
-  box-shadow: 0px 2px 15px 2px rgba(230, 232, 233, 0.644); 
 
-
+.album div:hover {
+  height: 700px;
+  border: 2px solid white;
+  box-shadow: 0px 2px 15px 2px rgba(230, 232, 233, 0.644);
 }
