--- a/PageOne.css
+++ b/PageOne.css
@@ -1,291 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap');
-
-*{
-    margin:0;
-    padding: 0;
-    box-sizing:border-box;
-    color:white;
-    /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-    /* font-family:'Times New Roman', Times, serif; */
-}
-
-body header{
-  top:0;
-  position:fixed;
-  z-index: 1000;
-}
-
-body main{
-  font-family: 'Cinzel', serif;
-
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: rgb(2, 4, 39);
-    background-image: radial-gradient(circle, rgb(17, 86, 151)  , rgb(0, 26, 56)  , rgb(0, 4, 24) );
- */
-}
-
-.container .icon{
-    position: absolute;
-    left: -50%;
-    width:100%;
-    height:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    z-index:100;
-}
-
-.container .icon .imgBx{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    transition: 0.5s;
-   transform: rotate(calc(360deg/9 * var(--i)));
-   transform-origin: 320px;
-   z-index: 100;
-   overflow: visible;
- 
-}
-
-.container .icon .imgBx img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit:cover;
-    transform: rotate(calc(-360deg/9 * var(--i)));
-    z-index: 100;
-}
-
-@keyframes rotateContainer {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-
-  .container {
-    z-index: 100;
-    position: absolute;
-    width: 600px;
-    height: 600px;
-    border-radius: 50%;
-    animation: rotateContainer 20s linear infinite;
-    
-  }
-  
-  .invoker{
-    margin:auto;
-    z-index: 1; 
-    position:absolute;
-    top:35%;
-    animation: floating 2s ease-in-out infinite;
-    animation: bouncing 1.8s ease-in-out infinite;      
-  }
-  
-  @keyframes floating {
-    0% {
-      transform: translate(0, 0);
-    }
-    50% {
-      transform: translate(0, 10px);
-    }
-    100% {
-      transform: translate(0, 0);
-    }
-  }
-
-  @keyframes bouncing {
-    0% {
-      transform: translate(0, 0);
-    }
-    50% {
-      transform: translate(0, -20px);
-    }
-    100% {
-      transform: translate(0, 0);
-    }
-  }
-  
-
-  .top-navigation{
-   
-    top:0;
-    z-index:1000;
-    position:fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height:180px;
-    width:100%;
-    /* background-color:rgba(94, 56, 56, 0.411); */
-    color:#fff;
-    padding:10px;
-    margin:10px;
-
-  }
-
-  .top-navigation .name-bar{
-        
-        /* background-color: rgb(231, 13, 13); */
-        height: 100px;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-        width:450px;
-        margin:10px;
-        padding:10px;
-
-  }
-  .center-menu{
-    display: flex;
-    height:110px;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 50px 10px 10px 50px;
-  }
-  
-  .name-bar-name{
- 
-    background: linear-gradient(to bottom, #ee1f1f, #ad0202, #460000); /* Add background gradient here */
-    width: 500px;
-    text-align: center;
-    color:white;
-    border: 3px outset rgb(236, 194, 3);
-    border-radius:15px;   
-  }
-  .name-bar-name:hover{
-    box-shadow: 0px 5px 15px 5px rgba(4, 146, 202, 0.644); 
-
-  }
-  .name-bar-position{
-    background: linear-gradient(to bottom, #0270ee, #07135a); /* Add background gradient here */
-    margin:2px;
-    text-align: center;
-    color:white;
-    border-radius:8px;
-    border: 3px outset rgb(236, 194, 3);
-    margin-top:10px;
-   
-  }
-  .name-bar-position:hover{
-    box-shadow: 0px 5px 15px 2px rgba(4, 146, 202, 0.644); 
-
-  }
-  .name-bar-number{
-    font-size:small;
-    display: flex;
-    justify-content:space-between;
-    color:greenyellow;
-  }
-
-  #avatar{
-    border: 5px solid rgb(199, 170, 5);
-    border-radius: 50%;
-    height: 180px;
-    background-color: black;
-    overflow: hidden;
-  }
-
-  #avatar img{
-    width:100%;
-    height:100%;
-
-
-  }
-
-  .icon-settings{
-    font-size:2em;
-    
-    background-color: black;
-    border-radius: 50%;
-    border:2px solid black;
-  }
-
-  .icon-menu{
-    font-size:2em;
-  }
-  .icon-bell{
-    font-size:2em;
-  }
-
-  .Left-Bar{
-    top: 0;
-    left:0;
-    position:fixed;
-    height:100%;
-    display: flex;
-    flex-direction: column;
-    z-index: 50;
-    margin-top: 20vw;
-    color:white;
-    margin-left:15px;
-  }
-
-  .Left-Bar a{
-    margin-top:2vh;
-    text-decoration: none;
-    color:white;
-  }
-.Left-Bar hr{
-    border:6px solid      rgba(2, 4, 39, 0);
-  }
-
-.Left-Bar div{
-    background: linear-gradient(90deg,rgb(8, 94, 27), rgba(8, 97, 38, 0.432));
-  }
-.Left-Bar span{
-  color:rgb(21, 182, 16);
-  padding:5px;
-}
-.Left-Bar span p{
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.right_nav div{
-margin:15px;
-}
-
-
-.Projects {
-  display: flex;
-  height: 200px;
-  width: 100%;
-  flex-direction: row;
-  gap: 20px;
-  bottom: 0px;
-  position: absolute;
-  z-index: 500;
-  background-color: rgba(0, 0, 0, 0.507);
-  justify-content: center;
-
-}
-
-.Projects div {
-  padding:10px;
-  align-items: center;
-  bottom: 0;
-  height: 200px;
-  width: 300px;
-  float: left;
-  display:flex;
-  flex-direction: column;
-  background-color: rgba(0, 0, 0, 0.507);
-  transition: transform 0.3s ease; /* Added this line for smooth transition */
-}
-
-.Projects div:hover {
-  border: 1px solid red;
-  transform: translateY(-100px); /* Added this line to move the div up */
-  height: 300px;
-  
-}
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap');*{margin:0;padding:0;box-sizing:border-box;color:white}body header{top:0;position:fixed;z-index:1000}body main{font-family:'Cinzel',serif;display:flex;justify-content:center;align-items:center;min-height:100vh;background-color:#020427;background-image:radial-gradient(circle,#115697,#001a38,#000418);*/}.container .icon{position:absolute;left:-50%;width:100%;height:100%;display:flex;justify-content:center;align-items:center;cursor:pointer;z-index:100}.container .icon .imgBx{position:absolute;width:50px;height:50px;transition:.5s;transform:rotate(calc(360deg/9*var(--i)));transform-origin:320px;z-index:100;overflow:visible}.container .icon .imgBx img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;transform:rotate(calc( - 360deg/9*var(--i)));z-index:100}@keyframes rotateContainer{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}.container{z-index:100;position:absolute;width:600px;height:600px;border-radius:50%;animation:rotateContainer 20s linear infinite}.invoker{margin:auto;z-index:1;position:absolute;top:35%;animation:floating 2s ease-in-out infinite;animation:bouncing 1.8s ease-in-out infinite}@keyframes floating{0%{transform:translate(0,0)}50%{transform:translate(0,10px)}100%{transform:translate(0,0)}}@keyframes bouncing{0%{transform:translate(0,0)}50%{transform:translate(0,-20px)}100%{transform:translate(0,0)}}.top-navigation{top:0;z-index:1000;position:fixed;display:flex;justify-content:space-between;align-items:center;height:180px;width:100%;color:#fff;padding:10px;margin:10px}.top-navigation .name-bar{height:100px;justify-content:center;display:flex;flex-direction:column;width:450px;margin:10px;padding:10px}.center-menu{display:flex;height:110px;align-items:center;justify-content:space-between;border-radius:50px 10px 10px 50px}.name-bar-name{background:linear-gradient(to bottom,#ee1f1f,#ad0202,#460000);width:500px;text-align:center;color:white;border:3px outset #ecc203;border-radius:15px}.name-bar-name:hover{box-shadow:0 5px 15px 5px rgba(4,146,202,0.644)}.name-bar-position{background:linear-gradient(to bottom,#0270ee,#07135a);margin:2px;text-align:center;color:white;border-radius:8px;border:3px outset #ecc203;margin-top:10px}.name-bar-position:hover{box-shadow:0 5px 15px 2px rgba(4,146,202,0.644)}.name-bar-number{font-size:small;display:flex;justify-content:space-between;color:greenyellow}#avatar{border:5px solid #c7aa05;border-radius:50%;height:180px;background-color:black;overflow:hidden}#avatar img{width:100%;height:100%}.icon-settings{font-size:2em;background-color:black;border-radius:50%;border:2px solid black}.icon-menu{font-size:2em}.icon-bell{font-size:2em}.Left-Bar{top:0;left:0;position:fixed;height:100%;display:flex;flex-direction:column;z-index:50;margin-top:20vw;color:white;margin-left:15px}.Left-Bar a{margin-top:2vh;text-decoration:none;color:white}.Left-Bar hr{border:6px solid rgba(2,4,39,0)}.Left-Bar div{background:linear-gradient(90deg,#085e1b,rgba(8,97,38,0.432))}.Left-Bar span{color:#15b610;padding:5px}.Left-Bar span p{font-family:Arial,Helvetica,sans-serif}.right_nav div{margin:15px}.Projects{display:flex;height:200px;width:100%;flex-direction:row;gap:20px;bottom:0;position:absolute;z-index:500;background-color:rgba(0,0,0,0.507);justify-content:center}.Projects div{padding:10px;align-items:center;bottom:0;height:200px;width:300px;float:left;display:flex;flex-direction:column;background-color:rgba(0,0,0,0.507);transition:transform .3s ease}.Projects div:hover{border:1px solid red;transform:translateY(-100px);height:300px}
